# stock-sentiment

./: ORDPRD.md  PRD.md  README.md  preg.txt  progress.txt  pyproject.toml
infra/: app.py
infra/stacks/: sec_agent_stack.py
src/news_agent/: __init__.py  agent.py  mangum_handler.py  models.py
src/news_agent/analysis/: __init__.py  claims_extractor.py  materiality.py  sentiment.py  trends.py
src/news_agent/api/: __init__.py  server.py
src/news_agent/cli/: __init__.py  main.py
src/news_agent/memory/: __init__.py  agent_memory.py
src/news_agent/news/: __init__.py  cache.py  entity_resolver.py  newsapi_client.py
src/news_agent/retrieval/: __init__.py
src/news_agent/tools/: __init__.py  analyze.py  fetch_news.py  trends.py
src/orchestrator/: __init__.py  agent.py  mangum_handler.py
src/orchestrator/api/: __init__.py  server.py
src/orchestrator/cli/: __init__.py  main.py
src/sec_agent/: agent.py  mangum_handler.py
src/sec_agent/api/: server.py
tests/: test_agent.py  test_api.py  test_async_executor.py  test_chunker.py  test_classifier.py  test_cli.py  test_discrepancy_detection.py  test_edgar_client.py  test_execution_result.py  test_memory.py  test_news_agent.py  test_news_materiality.py  test_news_models.py  test_news_sentiment.py  test_news_trends.py  test_orchestration_agent.py  test_orchestrator_api.py  test_orchestrator_cli.py  test_orchestrator_e2e.py  test_orchestrator_integration.py  test_orchestrator_lambda.py  test_orchestrator_memory.py  test_parser.py  test_retrieval.py  test_s3_cache.py  test_signal_extraction.py  test_synthesizer.py
(+22 files in other folders)
