[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sec-agent"
version = "0.1.0"
description = "AI agent for SEC EDGAR filings analysis using AWS AgentCore with Bedrock"
requires-python = ">=3.11"
dependencies = [
    "boto3",
    "beautifulsoup4",
    "lxml",
    "faiss-cpu",
    "numpy",
    "click",
    "fastapi",
    "uvicorn",
    "mangum",
    "httpx",
    "tiktoken",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "moto[s3]",
    "ruff",
    "mypy",
]
infra = [
    "aws-cdk-lib",
    "constructs",
]

[project.scripts]
sec-agent = "sec_agent.cli.main:cli"
news-agent = "news_agent.cli.main:cli"
orchestrator = "orchestrator.cli.main:cli"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
